grass (6.4.1~rc2-1) unstable; urgency=low

  * New upstream release candidate.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 20 Mar 2011 10:56:46 +0100

grass (6.4.0-2) unstable; urgency=low

  * Ready for unstable.
  * Removed pre-release patches inserted in the squeeze latest upload.

  * Merged from 6.4.0-1 in experimental:
      - Added missing docs used by GUIs: AUTHORS, contributors CSV files,
        COPYING and a symlink to GPL-2 license in /usr/share/common-licenses.
        Those files need to be symlinked in GISBASE to be found at run-time.
        Thanks AlanB and Hamish for pointing the problem.
        (closes: #594492)
      - New upstream final release 6.4.0.
      - Note that now default interface is the wx one, so (wx)python related suggestions
        have been promoted to proper dependencies. For the same reason I would
        consider cut/paste problems of the past Tk interface obsolete.
        (closes: #305249)
      - Policy bumped to 3.9.1. No changes required.
      - Added libgdal1-dev dep to grass-dev list of dependencies.
        (closes: #598706)

  * Merged from 6.4.0~rc6+42329-3:
      - Now builds against Tcl/Tk >= 8.5.
        (closes: #582595)
      - Removed obsolete grass-doc conflicts/replaces.

  * Moved to source format 3.0 and quilt patch support.
  * Moved from svn to git and updated Vcs-* fields in debian/control* as due.
  * Merged experimental changelogs.
  * Now saves and restores upstream config.{sub|guess} to avoid annoying warnings.

 -- Francesco Paolo Lovergine <frankie@debian.org>  Wed, 16 Feb 2011 17:04:43 +0100

grass (6.4.0-1) experimental; urgency=low

  * New upstream final release.
  * Note that now default interface is the wx one, so (wx)python related suggestions
    have been promoted to proper dependencies. For the same reason I would
    consider cut/paste problems of the past Tk interface obsolete.
    (closes: #305249)
  * Policy bumped to 3.9.1. No changes required.