@@ -1,8 +1,9 @@
 grass (6.4.1~rc2-1) unstable; urgency=low
 
   * New upstream release candidate.
+  * Now build-dep on libjpeg-dev and current libreadline6-dev.
 
- -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 20 Mar 2011 10:56:46 +0100
+ -- Francesco Paolo Lovergine <frankie@debian.org>  Sun, 20 Mar 2011 11:58:47 +0100
 
 grass (6.4.0-2) unstable; urgency=low
 
